# OpenQuantumSimulation

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup_julia.py
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: bench_mcsolve.py  bench_mesolve.py  bench_vs_qutip.py
docs/: conf.py  index.rst  performance.rst  publishing.rst  quickstart.rst  quickstart_validation.rst  release_checklist.md  result_hdf5_schema.rst  validation.rst
docs/api/: correlations.rst  hilbert.rst  index.rst  observables.rst  operators.rst  phase_space.rst  plotting.rst  results.rst  solvers.rst  sweeps.rst  systems.rst  timedep.rst
docs/theory/: index.rst
docs/tutorials/: 01_qubit_decay_mesolve.ipynb  02_parameter_sweep.ipynb  03_phase_space_plotting.ipynb  04_state_metrics_observables.ipynb  index.rst  qubit_decay_5min.rst
examples/: __init__.py
examples/dicke/: README.md  __init__.py  analyze_mi_distribution.py  bench_mi.py  observables.py  run_mi_distribution.py  system.py
openquantumsim/: __init__.py  _julia_bridge.py  _version.py  correlations.py  hilbert.py  observables.py  operators.py  phase_space.py  plot.py  py.typed  result.py  solvers.py  sweep.py  systems.py  timedep.py
openquantumsim/julia/OpenQuantumSimJL/: Manifest.toml  Project.toml
openquantumsim/julia/OpenQuantumSimJL/src/: Correlations.jl  HilbertSpace.jl  Propagators.jl  SteadyState.jl  Utils.jl
openquantumsim/julia/OpenQuantumSimJL/test/: runtests.jl
scripts/: build_sysimage.jl  check_index_install.py  check_publish_ready.py  check_wheel_install.py  run_benchmarks.sh  run_mcsolve_qubit_decay.py  run_sweep.py  validate_jaynes_cummings_qutip.py
src/OpenQuantumSimJL/src/: Lindblad.jl  Observables.jl  OpenQuantumSimJL.jl  Operators.jl  Parallel.jl  TimeDep.jl  Trajectories.jl
tests/: test_analyze_dicke_mi_distribution.py  test_bench_dicke_mi.py  test_docs.py  test_hilbert.py  test_observables.py  test_operators.py  test_packaging.py  test_phase_space.py  test_plot.py  test_result_io.py  test_run_dicke_mi_distribution.py  test_run_sweep.py  test_sweep.py  test_systems.py  test_timedep.py
tests/physics/: test_correlations.py  test_jaynes_cummings_qutip.py  test_mcsolve_qubit_decay.py  test_mesolve_states.py  test_qubit_decay.py  test_time_dependent.py
