[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openquantumsim"
version = "0.1.0a1"
description = "Python-accessible, Julia-powered simulation tools for open quantum systems."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Mohammad Jafari"}]
keywords = ["open quantum systems", "quantum trajectories", "lindblad", "julia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "juliacall>=0.9",
    "h5py>=3.8",
    "xarray>=2023.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1.8",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "myst-nb>=1.0",
]
release = [
    "build>=1.2",
    "twine>=5.0",
]
validation = [
    "qutip>=5.0",
]

[project.urls]
Homepage = "https://github.com/mohammadjafariph/OpenQuantumSimulation"
Issues = "https://github.com/mohammadjafariph/OpenQuantumSimulation/issues"
Documentation = "https://mohammadjafariph.github.io/OpenQuantumSimulation/"
Source = "https://github.com/mohammadjafariph/OpenQuantumSimulation"

[tool.setuptools.packages.find]
include = ["openquantumsim*"]

[tool.setuptools.package-data]
openquantumsim = [
    "py.typed",
    "julia/OpenQuantumSimJL/Manifest.toml",
    "julia/OpenQuantumSimJL/Project.toml",
    "julia/OpenQuantumSimJL/src/*.jl",
    "julia/OpenQuantumSimJL/test/*.jl",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "physics: physics validation tests",
    "integration: end-to-end Python-Julia integration tests",
    "slow: long-running simulations",
]
